--- a/plugins/examples/context_forge/internal/regex_filter/plugin-manifest.yaml
+++ b/plugins/examples/context_forge/internal/regex_filter/plugin-manifest.yaml
@@ -4,6 +4,6 @@ version: "0.1.0"
 available_hooks:
   - "prompt_pre_hook"
   - "prompt_post_hook"
-  - "tool_pre_hook"
-  - "tool_post_hook"
+  - "tool_pre_invoke"
+  - "tool_post_invoke"
 default_configs:
